--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ section {
     padding-bottom: 1%;
     background-color: #DFE7FD;
 }
+
 #experience_block{
     width: 80%;
     margin-left: 10%;
@@ -49,4 +50,51 @@ button:hover {
 footer {
     letter-spacing: 5px;
     background-color: #FDE2E4;
+}
+header {
+    display: block;
+    background-color: #EAE4E9;
+    position: fixed;
+    z-index: 2;
+}
+.container {
+    padding: 1rem 0;
+    margin: 0 auto;
+    max-width: 1024px;
+}
+div {
+    display: line-block;
+}
+.nav{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.menu {
+    display: flex;
+    align-items: center;
+}
+.menu_item {
+    margin-right: 1rem;
+
+}
+li {
+    display: list-item;
+    list-style: none;
+}
+.grid {
+    max-width: relative;
+    display: grid;
+    grid-template-columns:1fr 1fr; 
+    grid-template-rows: 1fr 1fr;
+  }
+.exp_item:nth-child(odd) {
+    background: #a5cee9;
+}
+#message ul{
+    max-width: relative;
+    display: grid;
+    grid-template-columns:1fr 1fr; 
+    grid-template-rows: 1fr 1fr;
+
 }
